--- a/app/views/pages/contacts.html.slim
+++ b/app/views/pages/contacts.html.slim
@@ -6,8 +6,8 @@
 
 
 
-h1.page-header Контакты
-p.lead Если вам нужна удобная, качественная и надежная женская обувь известных мировых брендов, будем рады вас видеть в нашем магазине.
+h1 Контакты
+p.lead Будем рады вас видеть в нашем магазине, eсли вам нужна удобная, качественная и надежная женская обувь известных мировых брендов.
 .row
   .col-md-8
     = render :partial => 'shared/map'
