--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -19,6 +19,15 @@
 @import "partials/*"
 
 
+
+h1
+  text-transform: uppercase
+  font-size: 32px
+  line-height: 28px
+  margin-top: 30px
+  margin-bottom: 8px
+  color: #373f41
+
 // body
   // background: radial-gradient(hsl(0, 100%, 27%) 4%, hsl(0, 100%, 18%) 9%, hsla(0, 100%, 20%, 0) 9%) 0 0, radial-gradient(hsl(0, 100%, 27%) 4%, hsl(0, 100%, 18%) 8%, hsla(0, 100%, 20%, 0) 10%) 50px 50px, radial-gradient(hsla(0, 100%, 30%, 0.8) 20%, hsla(0, 100%, 20%, 0)) 50px 0,radial-gradient(hsla(0, 100%, 30%, 0.8) 20%, hsla(0, 100%, 20%, 0)) 0 50px, radial-gradient(hsla(0, 100%, 20%, 1) 35%, hsla(0, 100%, 20%, 0) 60%) 50px 0, radial-gradient(hsla(0, 100%, 20%, 1) 35%, hsla(0, 100%, 20%, 0) 60%) 100px 50px, radial-gradient(hsla(0, 100%, 15%, 0.7), hsla(0, 100%, 20%, 0)) 0 0, radial-gradient(hsla(0, 100%, 15%, 0.7), hsla(0, 100%, 20%, 0)) 50px 50px, linear-gradient(45deg, hsla(0, 100%, 20%, 0) 49%, hsla(0, 100%, 0%, 1) 50%, hsla(0, 100%, 20%, 0) 70%) 0 0, linear-gradient(-45deg, hsla(0, 100%, 20%, 0) 49%, hsla(0, 100%, 0%, 1) 50%, hsla(0, 100%, 20%, 0) 70%) 0 0
   // background-color: #eee
@@ -39,17 +48,19 @@
 
 .container
   position: relative
-  max-width: 900px
+  max-width: 989px
   padding: 0
   // box-shadow: 0 0 10px rgba(0, 0, 0, 0.05)
 .container-main
-  padding: 0 15px !important
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
+  // padding-top: 70px
+  padding: 70px 15px 0
+  background: #f7f7f7
+  // box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
   // background: linear-gradient(to bottom, #f1f1f1 0%, #d9d9d9 100%) repeat scroll 0 0 #d9d9d9
 
 .wrapper
   position: relative
-  max-width: 900px
+  max-width: 989px
   margin: 0 auto
   padding: 0 30px
 
