--- a/app/assets/stylesheets/bootstrap/_type.scss
+++ b/app/assets/stylesheets/bootstrap/_type.scss
@@ -6,8 +6,8 @@
 // Headings
 // -------------------------
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
+h2, h3, h4, h5, h6,
+.h2, .h3, .h4, .h5, .h6 {
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
   line-height: $headings-line-height;
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6,
   }
 }
 
-h1, .h1,
+.h1,
 h2, .h2,
 h3, .h3 {
   margin-top: $line-height-computed;
@@ -44,7 +44,7 @@ h6, .h6 {
   }
 }
 
-h1, .h1 { font-size: $font-size-h1; }
+// h1, .h1 { font-size: $font-size-h1; }
 h2, .h2 { font-size: $font-size-h2; }
 h3, .h3 { font-size: $font-size-h3; }
 h4, .h4 { font-size: $font-size-h4; }
@@ -61,10 +61,9 @@ p {
 
 .lead {
   margin-bottom: $line-height-computed;
-  font-size: floor(($font-size-base * 1.15));
+  font-size: 17px !important;
   font-weight: 300;
-  line-height: 1.4;
-
+  color: #818888;
   @media (min-width: $screen-sm-min) {
     font-size: ($font-size-base * 1.5);
   }
