--- a/app/assets/stylesheets/partials/_header.sass
+++ b/app/assets/stylesheets/partials/_header.sass
@@ -1,60 +1,60 @@
-.header
-  max-width: 900px
-  margin: 0 auto
-  // +clearfix
-  // background: #dddddd
+// .header
+//   max-width: 900px
+//   margin: 0 auto
+//   // +clearfix
+//   // background: #dddddd
 
-.header__logo
-  display: inline-block
-  vertical-align: top
-  width: 120px
-  height: 46px
-  text-indent: -9999999px
-  background: asset-data-url('logo.png') 0 0 / cover no-repeat
-  @media (max-width: 992px)
-    margin-left: 20px
+// .header__logo
+//   display: inline-block
+//   vertical-align: top
+//   width: 120px
+//   height: 46px
+//   text-indent: -9999999px
+//   background: asset-data-url('logo.png') 0 0 / cover no-repeat
+//   @media (max-width: 992px)
+//     margin-left: 20px
 
 
-.nav
-  > li
-    > a
-      padding: 15px
+// .nav
+//   > li
+//     > a
+//       padding: 15px
 
-.lead
-  @media (max-width: 480px)
-    font-size: 14px
-// .main_navigation
-//   float: right
-//   li
-//     position: relative
-//     +inline-block
-//     line-height: 16px
-//     font-size: 16px
-//     font-family: $font-family-sans-serif
-//     &.active
-//       a
-//         color: #000
-//         text-decoration: underline
-//     a
-//       display: block
-//       padding: 35px 30px 20px
-//       color: #656565
-//       outline: none
-//       &:hover, &:active, &:visited
-//         text-decoration: underline
-//     &:after
-//       position: absolute
-//       top: 50%
-//       right: -2px
-//       margin: 0
-//       content: "\f111"
-//       color: #fff
-//       font-family: FontAwesome
-//       font-size: 3px
-//     &:last-child
-//       &:after
-//         content: " "
-//   .logo
-//     position: absolute
-//     font-size: 0
-//     text-indent: -9999999px
+// .lead
+//   @media (max-width: 480px)
+//     font-size: 14px
+// // .main_navigation
+// //   float: right
+// //   li
+// //     position: relative
+// //     +inline-block
+// //     line-height: 16px
+// //     font-size: 16px
+// //     font-family: $font-family-sans-serif
+// //     &.active
+// //       a
+// //         color: #000
+// //         text-decoration: underline
+// //     a
+// //       display: block
+// //       padding: 35px 30px 20px
+// //       color: #656565
+// //       outline: none
+// //       &:hover, &:active, &:visited
+// //         text-decoration: underline
+// //     &:after
+// //       position: absolute
+// //       top: 50%
+// //       right: -2px
+// //       margin: 0
+// //       content: "\f111"
+// //       color: #fff
+// //       font-family: FontAwesome
+// //       font-size: 3px
+// //     &:last-child
+// //       &:after
+// //         content: " "
+// //   .logo
+// //     position: absolute
+// //     font-size: 0
+// //     text-indent: -9999999px
