--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -49,10 +49,12 @@ h1
 .container
   position: relative
   max-width: 989px
-  padding: 0
+  padding: 0 15px
+
+.content
+  padding: 20px 0
   // box-shadow: 0 0 10px rgba(0, 0, 0, 0.05)
 .container-main
-  // padding-top: 70px
   padding: 70px 15px 0
   background: #f7f7f7
   // box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
