--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -5,15 +5,15 @@
 - seo_keywords 'обувь стиль, обувной магазин стиль, женский обувной магазин Тверь, Испанская, Финская, Немецкая обувь Тверь'
 
 h1 О нас
+.content
+  .row
+    .col-md-10.col-md-offset-1
+      = image_tag('about.jpg', alt: 'Магазин Стиль', class: 'about__img pull-left')
 
-.row
-  .col-md-10.col-md-offset-1
-    = image_tag('about.jpg', alt: 'Магазин Стиль', class: 'about__img pull-left')
+      p.lead «Стиль» - магазин женской обуви, который открылся в городе Тверь в 2004 г. и работает уже более 11 лет.
 
-    p.lead «Стиль» - магазин женской обуви, который открылся в городе Тверь в 2004 г. и работает уже более 11 лет.
+      p.lead На сегодняшний день наши бренды – это известные фирмы, среди которых: Hispanitas, Pikolinas, Beautifeel, Högl и многие другие, которые являются лидирующими на международном рынке европейскими производителями фирменной обуви, предъявляющими высокие требования к качеству, соответствию моде и дизайну.
 
-    p.lead На сегодняшний день наши бренды – это известные фирмы, среди которых: Hispanitas, Pikolinas, Beautifeel, Högl и многие другие, которые являются лидирующими на международном рынке европейскими производителями фирменной обуви, предъявляющими высокие требования к качеству, соответствию моде и дизайну.
+      p.lead Вы точно найдёте то, что вам нужно!
 
-    p.lead Вы точно найдёте то, что вам нужно!
-
-    p.lead Мы продумываем коллекции не только под каждый из сезонов, но и на все случаи жизни: комфортная обувь на каждый день, модная, модельная обувь «на выход» и для работы.
+      p.lead Мы продумываем коллекции не только под каждый из сезонов, но и на все случаи жизни: комфортная обувь на каждый день, модная, модельная обувь «на выход» и для работы.
