makeup responsive navbar

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -33,6 +33,10 @@ h1
   // background-color: #eee
 // .sale
 //   margin: 0 0 30px 0
+a
+  &:active,&:hover, &:focus
+    outline: none
+
 .map
   margin: 0 0 30px 0
 .page-header
