--- a/app/assets/stylesheets/partials/_filter.sass
+++ b/app/assets/stylesheets/partials/_filter.sass
@@ -5,6 +5,8 @@
     display: inline-block
     vertical-align: top
     margin: 0 20px 0 0
+    @media (max-width: $screen-xs)
+      margin: 0 20px 20px 0
     &.active
       a
         color: #fff
