--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -8,6 +8,11 @@
   @media (max-width: $screen-sm)
     height: 70px
 
+.main_header-fixed
+  position: relative
+  top: 0
+  left: 0
+
 // .main-header__container
 //   max-width: 989px
 //   display: flex
