--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -63,6 +63,8 @@ a
   background: #f7f7f7
   // box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
   // background: linear-gradient(to bottom, #f1f1f1 0%, #d9d9d9 100%) repeat scroll 0 0 #d9d9d9
+.padding-top-none
+  padding-top: 0
 
 .wrapper
   position: relative
