--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,6 +28,6 @@ html
     .up.visible-lg-block.visible-md-block@up
       = fa_icon "long-arrow-up", text: 'Наверх'
     = render :partial => 'shared/header'
-    .container.container-main class="#{(controller_name == 'pages' || action_name == 'index') && 'padding-top-none'}"
+    .container.container-main class="#{(controller_name == 'pages' && action_name == 'index') && 'padding-top-none'}"
       = yield
     = render :partial => 'shared/footer'
