--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -8,11 +8,11 @@
   /   | Мы специализируемся на женской обуви и соотрудничаем с такими известными торговыми марками как: Hispanitas, Pikolinas, Beautifeel, Hogl и другими.
 / .sale.well.well-small
 /   = image_tag('sale.jpg', alt: 'сезонная распродажа', class: 'img-responsive')
-.fotorama@fotorama  data-width="100%" data-height='100%' data-autoplay="true" data-fit="cover" data-nav="false" data-arrow='false' data-transition='crossfade'
-  = image_tag('hs.jpg', alt: 'Hispanitas', class: 'img-responsive')
-  = image_tag('waldlaufer.jpg', alt: 'Waldlaufer', class: 'img-responsive')
-  = image_tag('dakkem.jpg', alt: 'Dakkem', class: 'img-responsive')
-  = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel', class: 'img-responsive')
+.fotorama@fotorama  data-width="100%" data-height='auto' data-autoplay="true" data-fit="cover" data-nav="false" data-arrow='false' data-transition='crossfade'
+  = image_tag('hs.jpg', alt: 'Hispanitas')
+  = image_tag('waldlaufer.jpg', alt: 'Waldlaufer')
+  = image_tag('dakkem.jpg', alt: 'Dakkem')
+  = image_tag('BeautiFeel2.jpg', alt: 'Beautifeel')
   / = image_tag('bf.jpg', alt: 'Beautifeel', class: 'img-responsive')
   / = image_tag('pikolinas.jpg', alt: 'Pikolinas', class: 'img-responsive')
 / = image_tag('sale.jpg', alt: 'сезонная скидка', class: 'img-responsive')
