--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -10,7 +10,7 @@ html
 
   body
     = render :partial => 'admin/shared/header'
-    .container
+    .container.container-main
       / .row
       /   .col-md-9
       /     - if show_breadcrumbs?
