--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -8,6 +8,7 @@
 @import "bootstrap/variables"
 @import "bootstrap/mixins"
 @import "bootstrap/mixins/*"
+@import "bootstrap/modals"
 @import "bootstrap/*"
 
 
