--- a/app/views/admin/galleries/index.html.slim
+++ b/app/views/admin/galleries/index.html.slim
@@ -2,7 +2,9 @@
 @gallery
 - for gallery in @galleries
   .gallery
-    h2= link_to gallery.name, admin_gallery_path(gallery)
+    .clearfix
+      span.h2= link_to gallery.name, edit_admin_gallery_path(gallery)
+      = link_to "Удалить",  admin_gallery_path(gallery), data: { confirm: 'Are you sure?' }, :method => :delete, class: 'button btn btn-default pull-right'
     | Paintings: #{gallery.paintings.size}
 
     @galleryItemsList data-id="#{gallery.id}"
