--- a/app/views/admin/galleries/new.html.slim
+++ b/app/views/admin/galleries/new.html.slim
@@ -1,6 +1,5 @@
 h1 "New Gallery"
 
-= render 'form'
-
+= render :partial => 'form', :locals => { :url => admin_galleries_path, method: 'POST' }
 p
   = link_to "Back to List", galleries_path, :class => 'btn btn-default'
