--- a/app/views/galleries/index.html.slim
+++ b/app/views/galleries/index.html.slim
@@ -44,7 +44,7 @@ h1 Каталог обуви
         .hide
           - item.previews.each do | p |
             / = image_tag(p.asset_url, class: 'prev', role: 'fancyboxThumb')
-            = link_to image_tag(p.asset_url, class: 'img-responsive'), p.asset_url, role: 'fancyboxThumb', rel: "thumb_#{item.id}", class: 'gallery__item__link'
+            = link_to image_tag(p.asset_url(:full), class: 'img-responsive'), p.asset_url(:full), role: 'fancyboxThumb', rel: "thumb_#{item.id}", class: 'gallery__item__link'
       / - Painting.where('id NOT IN (?)', arr).each do | p |
 
       /   = link_to image_tag(p.image_url(:thumb), class: 'img-responsive'), p.image_url(:full), role: 'fancyboxThumb', rel: 'fancybox', class: 'gallery__item__link'
