--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,14 +1,11 @@
 @import "compass"
-@import "compass/reset"
 // @import "ui/01_variables.scss"
 // @import "mixins/*"
 // @import "ui/*"
 // @import "bootstrap-sass"
-
 @import "bootstrap/variables"
 @import "bootstrap/mixins"
 @import "bootstrap/mixins/*"
-@import "bootstrap/modals"
 @import "bootstrap/*"
 
 
@@ -28,18 +25,15 @@ h1
   margin-top: 30px
   margin-bottom: 8px
   color: #373f41
+  font-weight: 100
 
-// body
-  // background: radial-gradient(hsl(0, 100%, 27%) 4%, hsl(0, 100%, 18%) 9%, hsla(0, 100%, 20%, 0) 9%) 0 0, radial-gradient(hsl(0, 100%, 27%) 4%, hsl(0, 100%, 18%) 8%, hsla(0, 100%, 20%, 0) 10%) 50px 50px, radial-gradient(hsla(0, 100%, 30%, 0.8) 20%, hsla(0, 100%, 20%, 0)) 50px 0,radial-gradient(hsla(0, 100%, 30%, 0.8) 20%, hsla(0, 100%, 20%, 0)) 0 50px, radial-gradient(hsla(0, 100%, 20%, 1) 35%, hsla(0, 100%, 20%, 0) 60%) 50px 0, radial-gradient(hsla(0, 100%, 20%, 1) 35%, hsla(0, 100%, 20%, 0) 60%) 100px 50px, radial-gradient(hsla(0, 100%, 15%, 0.7), hsla(0, 100%, 20%, 0)) 0 0, radial-gradient(hsla(0, 100%, 15%, 0.7), hsla(0, 100%, 20%, 0)) 50px 50px, linear-gradient(45deg, hsla(0, 100%, 20%, 0) 49%, hsla(0, 100%, 0%, 1) 50%, hsla(0, 100%, 20%, 0) 70%) 0 0, linear-gradient(-45deg, hsla(0, 100%, 20%, 0) 49%, hsla(0, 100%, 0%, 1) 50%, hsla(0, 100%, 20%, 0) 70%) 0 0
-  // background-color: #eee
-// .sale
-//   margin: 0 0 30px 0
 a
   &:active,&:hover, &:focus
     outline: none
 
 .map
   margin: 0 0 30px 0
+
 .page-header
   @media (max-width: 480px)
     margin-top: 0
