--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -1,8 +1,8 @@
 .gallery
   margin-bottom: 40px
-// .gallery__title
-//   display: inline-block
-//   vertical-align: top
+
+.gallery__title
+  font-weight: 300
 
 .gallery__item
   margin: 0 0 20px 0
