fix gallery title

--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -13,13 +13,6 @@
   top: 0
   left: 0
 
-// .main-header__container
-//   max-width: 989px
-//   display: flex
-//   margin: 0 auto
-//   flex-flow: row nowrap
-//   align-items: center
-//   justify-content: space-between
 .main_header__logo
   display: inline-block
   vertical-align: top
@@ -29,12 +22,13 @@
   text-indent: -9999999px
   background: asset-data-url('logo.png') 0 0 / cover no-repeat
   @media (max-width: 992px)
-    margin-left: 20px
+    margin-left: 10px
 
 .nav-main
   float: right
   margin: 20px 0 0 0
-  padding: 0
+  padding: 0 0 10px 0
+  opacity: 0.9
   @media (max-width: $screen-sm)
     display: none
     background: #fff
