--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -2,12 +2,17 @@
   margin-bottom: 40px
 
 .gallery__title
-  font-weight: 300
+  color: #373f41
+  font-size: 32px
+  font-weight: 100
+  line-height: 28px
+  margin-bottom: 8px
+  margin-top: 30px
+  text-transform: uppercase
 
 .gallery__item
   margin: 0 0 20px 0
   transition: opacity .2s
-  transform: translate3d(0, 0, 0)
   &:hover
     opacity: 0.85
 
