--- a/app/views/admin/paintings/edit.html.slim
+++ b/app/views/admin/paintings/edit.html.slim
@@ -1,7 +1,7 @@
 - title "Edit Painting"
 
 p
-  = link_to "Назад", admin_gallery_path(@painting.gallery), class: 'btn btn-default'
+  = link_to "Назад", admin_galleries_path, class: 'btn btn-default'
 
 
 = render 'form'
