--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -5,6 +5,8 @@
   height: 80px
   width: 100%
   z-index: 500
+  border-bottom: 1px solid #ddd
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
   @media (max-width: $screen-sm)
     height: 70px
 
