--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,6 +1,6 @@
 - seo_description 'Обувь Стиль Тверь - магазин женской обуви в Твери. Каталог женской обуви в Твери.'
 
-- seo_keywords 'Обувь Стиль Тверь, обувной магазин Стиль, магазин обуви, женский обувной магазин город Тверь, купить обувь Тверь, каталог обуви, купить туфли'
+- seo_keywords 'обувь, женская, магазин, стиль, тверь, магазин обуви, каталог, обувь 2015, туфли, cапоги, полусапожки, ботильоны, ботинки'
 
 
   / h2 Наши Бренды
