--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -9,6 +9,7 @@
   margin-bottom: 8px
   margin-top: 30px
   text-transform: uppercase
+  font-family: $font-family-sans-serif-light
 
 .gallery__item
   margin: 0 0 20px 0
