--- a/app/views/admin/galleries/new.html.slim
+++ b/app/views/admin/galleries/new.html.slim
@@ -2,4 +2,4 @@ h1 "New Gallery"
 
 = render :partial => 'form', :locals => { :url => admin_galleries_path, method: 'POST' }
 p
-  = link_to "Back to List", galleries_path, :class => 'btn btn-default'
+  = link_to "Back to List", admin_galleries_path, :class => 'btn btn-default'
