--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,6 +11,7 @@
 @import "font-awesome"
 @import "nprogress"
 @import "fotorama"
+@import "lightslider"
 @import "fancybox/source/jquery.fancybox"
 @import "fancybox/source/helpers/jquery.fancybox-thumbs"
 
