--- a/app/assets/stylesheets/bootstrap/_modals.scss
+++ b/app/assets/stylesheets/bootstrap/_modals.scss
@@ -44,17 +44,12 @@
 .modal-dialog {
   position: relative;
   width: auto;
-  margin: 10px;
 }
 
 // Actual modal
 .modal-content {
   position: relative;
-  background-color: #f7f7f7;
-  border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
-  border: 1px solid $modal-content-border-color;
   border-radius: $border-radius-large;
-  @include box-shadow(0 3px 9px rgba(0,0,0,.5));
   background-clip: padding-box;
   // Remove focus outline from opened modal
   outline: 0;
@@ -104,6 +99,18 @@
   right: 0;
   top: 0;
   z-index: 99999;
+  background: #131313;
+  cursor: pointer;
+  filter: alpha(opacity=80);
+  opacity: .8;
+  height: 26px;
+  width: 26px;
+  color: #fff;
+  background-position: -210px -8px;
+  background-image: url('sprite.svg');
+  &:hover {
+    opacity: 1;
+  }
 }
 
 // Footer (for actions)
