--- a/app/assets/stylesheets/partials/_gallery.sass
+++ b/app/assets/stylesheets/partials/_gallery.sass
@@ -10,6 +10,8 @@
   margin-top: 30px
   text-transform: uppercase
   font-family: $font-family-sans-serif-light
+  @media (max-width: $screen-xs-min)
+    font-size: 24px
 
 .gallery__item
   margin: 0 0 20px 0
