--- a/app/assets/stylesheets/bootstrap/_modals.scss
+++ b/app/assets/stylesheets/bootstrap/_modals.scss
@@ -91,13 +91,13 @@
 // Where all modal content resides (sibling of .modal-header and .modal-footer)
 .modal-body {
   position: relative;
-  padding: $modal-inner-padding;
+  //padding: $modal-inner-padding;
 }
 
 .modal-close {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 10px;
+  top: 10px;
   z-index: 99999;
   background: #131313;
   cursor: pointer;
