--- a/app/views/catalog/get_previews.html.slim
+++ b/app/views/catalog/get_previews.html.slim
@@ -3,15 +3,9 @@ coffee:
     new Pages.Previews($(document).find('@previews'))
 
 .modal-body@previews
-
   div type="button" class="modal-close" data-dismiss="modal"
 
-  / = image_tag(resource_painting.image_url(:full), class: 'img-responsive')
-  / .row
-  /   - resource_painting.previews.each do |item|
-  /     .col-md-3
-  /       = link_to image_tag(item.asset_url, class: 'img-responsive'), item.asset_url, role: 'fancyboxThumb', rel: 'fancybox'
-  ul.lightSlider
+  ul@lightSlider
     li data-thumb="#{resource_painting.image_url(:full)}"
       = image_tag(resource_painting.image_url(:full), class: 'img-responsive')
     - resource_painting.previews.each do |p|
