--- a/app/assets/stylesheets/bootstrap/_modals.scss
+++ b/app/assets/stylesheets/bootstrap/_modals.scss
@@ -107,7 +107,7 @@
   width: 26px;
   color: #fff;
   background-position: -210px -8px;
-  background-image: url('sprite.svg');
+  background-image: image-url('sprite.svg');
   &:hover {
     opacity: 1;
   }
