--- a/app/assets/stylesheets/partials/_slider.sass
+++ b/app/assets/stylesheets/partials/_slider.sass
@@ -16,13 +16,13 @@
     width: 54px !important
     margin-top: -36px !important
     background-position: -93px -114px !important
-    background-image: url('sprite.svg') !important
+    background-image: image-url('sprite.svg') !important
   > a.lSPrev
     height: 72px !important
     width: 54px !important
     margin-top: -36px !important
     background-position: -13px -114px !important
-    background-image: url('sprite.svg') !important
+    background-image: image-url('sprite.svg') !important
 
 .lSPager
   li
