--- a/app/views/catalog/shared/_tiles.html.slim
+++ b/app/views/catalog/shared/_tiles.html.slim
@@ -1,7 +1,4 @@
 - articles.each do |article|
   .col-md-4.col-sm-4.col-xs-6
     .gallery__item
-      = link_to image_tag(article.image_url(:full), class: 'img-responsive'), article.image_url(:full), role: 'fancyboxThumb', rel:  "thumb_#{article.id}", class: 'gallery__item__link'
-    .hide
-      - article.previews.each do | p |
-        = link_to image_tag(p.asset_url(:full), class: 'img-responsive'), p.asset_url(:full), role: 'fancyboxThumb', rel: "thumb_#{article.id}", class: 'gallery__item__link'
+      = link_to image_tag(article.image_url(:full), class: 'img-responsive'), article.image_url(:full), class: 'gallery__item__link', data: { toggle: 'modal', target: '@modal' }
