--- a/app/views/catalog/shared/_tiles.html.slim
+++ b/app/views/catalog/shared/_tiles.html.slim
@@ -1,4 +1,4 @@
 - articles.each do |article|
   .col-md-4.col-sm-4.col-xs-6
     .gallery__item
-      = link_to image_tag(article.image_url(:full), class: 'img-responsive'), article.image_url(:full), class: 'gallery__item__link', data: { toggle: 'modal', target: '@modal' }
+      = link_to image_tag(article.image_url(:full), class: 'img-responsive'), get_previews_path(article), class: 'gallery__item__link', data: { toggle: 'modal', target: '@modal' }
